# universal-rag-azure

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt  start.py
agents/: __init__.py
agents/auto_domain/: __init__.py  agent.py  config_builder.py  corpus_analyzer.py  deps.py  domain_deps.py  domain_tools.py  pattern_learner.py  tools.py  toolsets.py
agents/gen_knowledge/: __init__.py  agent.py  deps.py  extractor.py  knowledge_deps.py  knowledge_tools.py  tools.py  validator.py
agents/graph_flows/: __init__.py  domain_flow.py  flow_enums.py  search_flow.py  state_persist.py
agents/supports/: __init__.py  ai_provider.py  cache.py  cache_mgr.py  config_nego.py  config_provider.py  enforcement.py  error_handler.py  graph_comm.py  learn_feedback.py  negotiator.py  perf_monitor.py  state_bridge.py
agents/uni_search/: __init__.py  agent.py  deps.py  orchestrator.py  search_deps.py  search_tools.py  tools.py
api/: __init__.py  main.py
api/endpoints/: __init__.py  search.py
azure_services/: __init__.py  cosmos_client.py  ml_client.py  openai_client.py  search_client.py  storage_client.py
azure_services/auth/: base_client.py
config/: __init__.py  constants.py  params.py  settings.py
config/environments/: development.env  staging.env
data/raw/Programming-Language/: sebesta_part_15.md
docs/: README.md
docs/api/: API_ENDPOINTS.md  endpoints.md
docs/architecture/: AZURE_INTELLIGENT_RAG_DESIGN.md  CONFIG_GENERATION_ARCHITECTURE.md  DATA_TYPE_STRATEGY.md  DUAL_GRAPH_DESIGN.md  MIGRATION_ROADMAP.md  azure_intelligent_rag_design.md  dual_graph_design.md
docs/guides/: BASIC_IMPLEMENTATION_PLAN.md  DEVELOPMENT_GUIDE.md  GETTING_STARTED.md  TODO_DRIVEN_IMPLEMENTATION_GUIDE.md  development_guide.md  getting_started.md
infra/: main.bicep
infra/modules/: ai-services.bicep  data-services.bicep
models/: __init__.py  agent_deps.py  azure.py  domain.py  enums.py  knowledge.py  search.py  validation.py  workflow.py
prompt_flows/: __init__.py  flow_mgr.py  prompt_composer.py  template_mgr.py
prompt_flows/defs/: domain_config.yaml  knowledge_extract.yaml  search_optimize.yaml
prompt_flows/templates/: config_gen.jinja2  domain_analyze.jinja2  entity_extract.jinja2  relation_extract.jinja2  search_optimize.jinja2
scripts/: __init__.py
scripts/dataflow/: 00_full_pipeline.py  01_data_ingestion.py  02_knowledge_extraction.py
scripts/deployment/: setup-environments.sh  sync-env.sh
scripts/hooks/: pre-commit-anti-hardcoding.sh
tests/: __init__.py  conftest.py
tests/architecture/: test_anti_hardcoding.py
tests/integration/: test_communication_layer.py  test_workflow_bridge.py
tests/unit/test_agents/: __init__.py  test_auto_domain_agent.py
tests/unit/test_config/: __init__.py  test_config_provider.py
tests/unit/test_services/: __init__.py  test_azure_ml_client.py
